[package]
name = "decaphase"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.8", features = [
  "flac",
  "vorbis",
] }
bevy_asset_loader = { version = "0.12", features = ["stageless"] }
bevy_kira_audio = { version = "0.12", features = ["flac"] }
bevy_egui = "0.16"
bevy-web-resizer = "3.0"
pathfinding = "3.0"
bevy_mod_picking = "0.9"
bevy_mod_raycast = "0.6"
iyes_loopless = "0.7"
bevy-scene-hook = "4.0"
rand = "0.8"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3